// Documentacion del esquema de base de datos para el Sistema de Citas
// Comentarios en español cortos para facilitar la lectura

// Tabla de Usuarios (Administradores/Dueños de Comercio y Soporte Técnico)
Table users {
  id integer [primary key, increment]
  email varchar(120) [unique, not null, note: "Correo de acceso del administrador"]
  password_hash varchar(255) [not null, note: "Contraseña hasheada"]
  name varchar(80) [note: "Nombre del comercio o administrador"]
  public_slug varchar(80) [unique, not null, note: "Slug único para la URL del comercio"]
  role varchar(20) [default: "admin", note: "Rol del usuario (admin, tecnico)"]
  is_blocked boolean [default: false, note: "Indica si la cuenta está suspendida administrativamente"]
  password_status varchar(20) [default: "active", note: "Estatus de la contraseña (active, on_change)"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// El evento pertenece a un grupo de disponibilidad y tiene slugs de enrutamiento
Table events {
  id integer [primary key, increment]
  group_id integer [ref: > event_groups.id, not null, note: "Define cuándo se puede agendar"]
  user_id integer [ref: > users.id, not null, note: "Dueño del evento para validación de slugs"]
  title varchar(150) [not null]
  description text 
  slug varchar(80) [not null, note: "Slug de URL para este servicio"]
  duration integer [not null, note: "Duración en minutos"]
  buffer_time integer [default: 0]
  is_active boolean [default: true]
  is_public boolean [default: true, note: "Si el evento es visible en el directorio público"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    (user_id, slug) [unique, name: "uq_user_event_slug"]
  }
}

// La disponibilidad pertenece al GRUPO
Table group_availabilities {
  id integer [primary key, increment]
  group_id integer [ref: > event_groups.id, not null]
  day_of_week integer [not null, note: "1: Lunes, 7: Domingo"]
  start_time time [not null]
  end_time time [not null]
  
  Indexes {
    (group_id, day_of_week) [name: "idx_group_day"]
  }
}

// Citas Agendadas por clientes
Table appointments {
  id integer [primary key, increment]
  event_id integer [ref: > events.id, not null]
  client_name varchar(100) [not null, note: "Nombre del cliente"]
  client_email varchar(120) [not null, note: "Correo del cliente"]
  client_phone varchar(20) [not null, note: "Teléfono del cliente para contacto"]
  start_time timestamp [not null, note: "Inicio de la cita"]
  end_time timestamp [not null, note: "Fin de la cita (inicio + duracion del evento)"]
  status varchar(20) [default: "pending", note: "Estado (pending, confirmed, cancelled)"]
  notes text [note: "Notas opcionales que envíe el cliente"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  Indexes {
    (event_id, start_time) [name: "idx_event_time"]
  }
}

// Controla la disponibilidad compartida
Table event_groups {
  id integer [primary key, increment]
  user_id integer [ref: > users.id, not null]
  name varchar(100) [not null, note: "Ej: Consultorio 1, Consultas Generales"]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}
